--- a/src/views/notes.ejs
+++ b/src/views/notes.ejs
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title><%= title; %></title>
   </head>
   <body>
+    <form method="post" action="/notes">
+      Add your note
+      <input name="textField" />
+      <button type="submit">Add</button>
+    </form>
     Notes
+    <ul>
+      <% notes.forEach(function(note){ %>
+      <li><%= note.text %></li>
+      <% }); %>
+    </ul>
   </body>
 </html>
