add feature delete

--- a/src/views/notes.ejs
+++ b/src/views/notes.ejs
@@ -14,7 +14,12 @@
     Notes
     <ul>
       <% notes.forEach(function(note){ %>
-      <li><%= note.text %></li>
+      <li>
+        <%= note.text %>
+        <form method="post" action="/notes/<%= note.id%>?_method=DELETE">
+          <button type="submit">delete</button>
+        </form>
+      </li>
       <% }); %>
     </ul>
   </body>
